--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       </article>
 
       <ul id="item-list" class="items">
-        <!-- <li>
+        <!-- 
+        <li>
           Apples
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
@@ -60,18 +61,18 @@
           </button>
         </li>
         <li>
-          Oreos
+          Eggs
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </li>
         <li>
-          Milk
+          Eggs nod
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
-        </li> -->
-      </ul>
+        </li>
+      --></ul>
 
       <button id="clear" class="btn-clear">Clear All</button>
     </main>
